make sure markdown content is rendered correctly on permalink pages

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
   {% include post_summary.html %}
 
   <div class="body">
-    {{ page.content }}
+    {{ content }}
   </div>
 
   <div class="footer">
