--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -320,3 +320,23 @@ table.tiles {
   color: #777;
   font-style: italic;
 }
+
+.ad {
+  width: 155px;
+  float: right;
+  padding: 10pt;
+  font-size: 80%;
+  margin-left: 15pt;
+  text-align: center;
+  border: 1px solid #595;
+  background-color: #efe;
+}
+
+.ad iframe {
+  border: none;
+  margin-left: 1pt;
+}
+
+.ad p {
+  margin: 2pt 0;
+}
