show the maze book ad on all pages

--- a/_includes/maze_book.html
+++ b/_includes/maze_book.html
@@ -2,5 +2,7 @@
   <iframe border="0px" height="182px" seamless="true" src="https://pragprog.com/products/buy_now_insert/jbmaze" width="155px">
 Buy Now
 </iframe>
-  <p>Like maze algorithms?<br />Try my book!</p>
+  <p class="exhortation">Try my new book!</p>
+  <p class="caveat">(currently in beta)</p>
+  <p>Algorithms, circle mazes, hex grids, masking, weaving, braiding, 3D, spheres, and more!</p>
 </div>
