--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,8 @@
   </script>
 </head>
 <body>
+  {% include maze_book.html %}
+
   <div class="sitename">
     <h1>{{ site.name }}</h1>
     <h2>{{ site.description }}</h2>
