--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -326,9 +326,10 @@ table.tiles {
   float: right;
   padding: 10pt;
   font-size: 80%;
-  margin-left: 15pt;
+  margin: 15pt;
+  margin-right: 25pt;
   text-align: center;
-  border: 1px solid #595;
+  border: 2px solid #aea;
   background-color: #efe;
 }
 
@@ -338,5 +339,16 @@ table.tiles {
 }
 
 .ad p {
-  margin: 2pt 0;
+  margin-top: 2pt;
+  margin-bottom: 5pt;
+}
+
+p.exhortation {
+  font-weight: bold;
+}
+
+p.caveat {
+  font-size: 75%;
+  color: #f55;
+  margin-top: -3pt;
 }
