more tweaking, also cache bust the CSS assets

--- a/_includes/maze_book.html
+++ b/_includes/maze_book.html
@@ -4,5 +4,5 @@ Buy Now
 </iframe>
   <p class="exhortation">Try my new book!</p>
   <p class="caveat">(currently in beta)</p>
-  <p>Algorithms, circle mazes, hex grids, masking, weaving, braiding, 3D, spheres, and more!</p>
+  <p>Algorithms, circle mazes, hex grids, masking, weaving, braiding, 3D and 4D grids, spheres, and more!</p>
 </div>
