--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,9 +3,9 @@
 <head>
   <title>{{ site.name }}</title>
   <meta charset="UTF-8" />
-  <link href="/stylesheets/styles.css" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/maze.css" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/syntax-legacy.css" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/styles.css?v1" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/maze.css?v1" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax-legacy.css?v1" rel="stylesheet" type="text/css" />
   <link rel="alternate" type="application/rss+xml" title="The Buckblog Feed" href="http://feeds.feedburner.com/buckblog" />
 
   <script type="text/javascript" src="/javascripts/prototype.js"></script>
