use correct link for purchasing the book

--- a/_includes/maze_book.html
+++ b/_includes/maze_book.html
@@ -1,7 +1,5 @@
 <div class="ad">
-  <iframe border="0px" height="182px" seamless="true" src="https://pragprog.com/products/buy_now_insert/jbmaze" width="155px">
-Buy Now
-</iframe>
+  <a class="product" href="https://pragprog.com/book/jbmaze/mazes-for-programmers"><img src="https://imagery.pragprog.com/products/439/jbmaze_largebeta.jpg?1421259509" /></a>
   <p class="exhortation">Try my new book!</p>
   <p class="caveat">(currently in beta)</p>
   <p>Algorithms, circle mazes, hex grids, masking, weaving, braiding, 3D and 4D grids, spheres, and more!</p>
