--- a/_includes/post_feature.html
+++ b/_includes/post_feature.html
@@ -7,4 +7,10 @@
   <div class="body">
     {{ post.content }}
   </div>
+
+  {% if post.comments %}
+    <div class="commentlink">
+      [ <a href="{{ post.url }}#disqus_thread">Comments</a> ]
+    </div>
+  {% endif %}
 </div>
