--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -57,6 +57,11 @@ body > .footer .license {
   text-align: center;
 }
 
+.post.featured .commentlink {
+  text-align: right;
+  font-size: 90%;
+}
+
 .post.featured {
   margin-bottom: 50pt;
 }
@@ -248,6 +253,7 @@ a.homelink, a.wizardlink {
   background: #dfd;
   border: 1px solid #ada;
   padding: 5pt;
+  margin-bottom: 20pt;
 }
 
 .post .footer table {
