"Playing with Constants, Methods, and Superclasses"

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
   <link href="/stylesheets/styles.css?v3" rel="stylesheet" type="text/css" />
   <link href="/stylesheets/maze.css?v1" rel="stylesheet" type="text/css" />
   <link href="/stylesheets/syntax-legacy.css?v1" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax.css?v1" rel="stylesheet" type="text/css" />
   <link rel="alternate" type="application/rss+xml" title="The Buckblog Feed" href="http://feeds.feedburner.com/buckblog" />
 
   <script type="text/javascript" src="/javascripts/prototype.js"></script>
