--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -6,6 +6,10 @@ pre, code {
   font-family: "Courier New", Courier, monospace;
 }
 
+p code {
+  background: #efe;
+}
+
 html, body {
   margin: 0;
   padding: 0;
@@ -291,6 +295,15 @@ a.homelink, a.wizardlink {
 .post img.center {
   display: block;
   margin: 0 auto;
+}
+
+.post p.images {
+  text-align: center;
+  white-space: nowrap;
+}
+
+.post p.images img {
+  margin: 0 20px;
 }
 
 table.tiles {
