Add link advertising DRM-free ebook

--- a/_includes/maze_book.html
+++ b/_includes/maze_book.html
@@ -9,4 +9,9 @@
     </span>
   </p>
   <p>Algorithms, circle mazes, hex grids, masking, weaving, braiding, 3D and 4D grids, spheres, and more!</p>
+  <p class="exhortation">
+    <span class="soldat">
+      <a target="_blank" href="https://pragprog.com/book/jbmaze/mazes-for-programmers">DRM-Free Ebook</a>
+    </span>
+  </p>
 </div>
