--- a/_includes/maze_book.html
+++ b/_includes/maze_book.html
@@ -1,11 +1,9 @@
 <div class="ad">
-  <a class="product" href="https://pragprog.com/book/jbmaze/mazes-for-programmers"><img src="https://imagery.pragprog.com/products/439/jbmaze_largecover.jpg?1421259509" /></a>
+  <a class="product" href="http://www.mazesforprogrammers.com"><img src="https://imagery.pragprog.com/products/439/jbmaze_largecover.jpg?1421259509" /></a>
   <p class="exhortation">
     <em>The</em> maze book for programmers!<br />
     <span class="soldat">
-      <a target="_blank" href="https://pragprog.com/book/jbmaze/mazes-for-programmers">PragProg</a>
-      <a target="_blank" href="http://www.amazon.com/Mazes-Programmers-Twisty-Little-Passages/dp/1680500554">Amazon</a>
-      <a target="_blank" href="http://www.barnesandnoble.com/w/mazes-for-programmers-jamis-buck/1121116586">BN.com</a>
+      <a target="_blank" href="http://www.mazesforprogrammers.com">mazesforprogrammers.com</a>
     </span>
   </p>
   <p>Algorithms, circle mazes, hex grids, masking, weaving, braiding, 3D and 4D grids, spheres, and more!</p>
